Lab 7: mismos errores del lab pasado, aparte de: cuando la session esta activa, dice que no postea el mensaje en la bdd pero si lo postea realmente, problem? no se aun.

--- a/css/commentStyles.css
+++ b/css/commentStyles.css
@@ -1,4 +1,4 @@
-#comment, #login, #signup {
+#comment, #login, #signup, #loginTabBtn {
     cursor: pointer; 
     color: white;
     background-color: #EE7A49;
